<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Exercise.ExerciseDashboardActivity">

    <TextView
        android:id="@+id/exerciseDashTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/exercise_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/exerciseStartButton"
        android:layout_width="200dp"
        android:layout_height="120dp"
        android:layout_marginBottom="16dp"
        android:onClick="onExerciseStartClick"
        android:text="@string/exercise_start"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/exercisePauseButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/exercisePauseButton"
        android:layout_width="200dp"
        android:layout_height="120dp"
        android:layout_marginTop="16dp"
        android:onClick="onExercisePauseClick"
        android:text="@string/exercise_pause"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exerciseStartButton" />

    <Button
        android:id="@+id/exerciseStopButton"
        android:layout_width="200dp"
        android:layout_height="120dp"
        android:layout_marginTop="16dp"
        android:onClick="onExerciseStopClick"
        android:text="@string/exercise_stop"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/exercisePauseButton" />

    <Button
        android:id="@+id/exerciseListButton"
        android:layout_width="200dp"
        android:layout_height="120dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:onClick="onExerciseListClick"
        android:text="@string/exercise_past"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/exerciseStopButton" />

    <TextView
        android:id="@+id/exerciseStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/exercise_status_off"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exerciseDashTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>