<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MainActivity">

    <org.osmdroid.views.MapView
        android:id="@+id/mapView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/centerButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:adjustViewBounds="false"
        android:cropToPadding="false"
        android:onClick="onCenterClick"
        android:scaleX="2"
        android:scaleY="2"
        android:src="@drawable/baseline_my_location_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/remindersButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="62dp"
        android:layout_marginEnd="24dp"
        android:adjustViewBounds="false"
        android:cropToPadding="false"
        android:onClick="onRemindersClick"
        android:scaleX="2"
        android:scaleY="2"
        android:src="@drawable/baseline_location_on_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/centerButton" />

    <ImageButton
        android:id="@+id/metricsButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:adjustViewBounds="false"
        android:cropToPadding="false"
        android:onClick="onMetricsClick"
        android:scaleX="2"
        android:scaleY="2"
        android:src="@drawable/baseline_bar_chart_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/exerciseButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:adjustViewBounds="false"
        android:cropToPadding="false"
        android:onClick="onExerciseClick"
        android:scaleX="2"
        android:scaleY="2"
        android:src="@drawable/baseline_directions_run_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/metricsButton" />

    <TextView
        android:id="@+id/mapDistanceText"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:background="@color/translucent_white"
        android:text="@string/map_distance_zero"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/exerciseButton" />

    <TextView
        android:id="@+id/mapTimeText"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="@color/translucent_white"
        android:text="@string/map_time_zero"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mapDistanceText" />

    <TextView
        android:id="@+id/mapSpeedText"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="@color/translucent_white"
        android:text="@string/map_speed_zero"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mapTimeText" />

</androidx.constraintlayout.widget.ConstraintLayout>